# spot-my-stats

./: .gitignore  README.md  pyproject.toml
spot_my_stats/: analyse.py  main.py  parser.py  visualise.py
