[tool.poetry]
name = "spot-my-stats"
version = "0.1.0"
description = "Spotify stats visualised"
authors = ["Caitlin Cannon <caitlin@cannons.dev>"]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload"
]
packages = [{ include = "spot_my_stats"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"

[tool.poetry.scripts]
spot-my-stats = "spot_my_stats.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
